@@ -26,7 +26,13 @@
         <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
         <selenium-api.version>3.141.5</selenium-api.version>
         <selenium-support.version>3.141.5</selenium-support.version>
+        <allure-maven.version>2.10.0</allure-maven.version>
+        <allure-testng.version>2.13.2</allure-testng.version>
+        <aspectjweaver.version>1.9.7</aspectjweaver.version>
+        <allure-maven.reportVersion>2.13.2</allure-maven.reportVersion>
+        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -62,48 +68,88 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>${maven-install-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <groupId>com.calculator</groupId>
+                            <artifactId>calculator-app</artifactId>
+                            <version>1.0</version>
+                            <packaging>jar</packaging>
+                            <file>${basedir}/lib/calculator-1.0.jar</file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
+                    </argLine>
                     <suiteXmlFiles>
-                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
+                        <suiteXmlFile>${testng.configs.path}/HW4Ex1Ex2Test.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectjweaver.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
     <profiles>
         <profile>
             <id>Multiplication_And_Division</id>
+            <activation><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/firstTest.MultiplicationAndDivision.xml</testng.suite.file>
             </properties>
         </profile>
         <profile>
             <id>Subtraction_And_Addition</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
+            <activation><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/defaultSecond.SubtractionAndAddition.xml</testng.suite.file>
             </properties>
         </profile>
         <profile>
             <id>All_Test</id>
+            <activation><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/AllTest.xml</testng.suite.file>
             </properties>
         </profile>
         <profile>
             <id>HW2</id>
+            <activation><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/TestEx1Ex2.xml</testng.suite.file>
             </properties>
         </profile>
         <profile>
             <id>HW3</id>
+            <activation><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/HW3Ex1Ex2Test.xml</testng.suite.file>
+            </properties>
+        </profile>
+        <profile>
+            <id>HW4</id>
+            <activation><activeByDefault>true</activeByDefault></activation>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/HW4Ex1Ex2Test.xml</testng.suite.file>
             </properties>
         </profile>
     </profiles>
@@ -125,6 +171,7 @@
             <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
@@ -144,23 +191,43 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>calculator</groupId>
-            <artifactId>calculatorapp</artifactId>
-            <scope>system</scope>
-            <version>1.0</version>
-            <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <version>${selenium-api.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-support</artifactId>
-            <version>${selenium-support.version}</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
-</project>
+             <groupId>calculator</groupId>
+             <artifactId>calculatorapp</artifactId>
+             <scope>system</scope>
+             <version>1.0</version>
+             <systemPath>${project.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
+         </dependency>
+         <dependency>
+             <groupId>org.seleniumhq.selenium</groupId>
+             <artifactId>selenium-api</artifactId>
+             <version>${selenium-api.version}</version>
+             <scope>compile</scope>
+         </dependency>
+             <dependency>
+             <groupId>org.seleniumhq.selenium</groupId>
+             <artifactId>selenium-support</artifactId>
+             <version>${selenium-support.version}</version>
+             <scope>compile</scope>
+         </dependency>
+         <dependency>
+             <groupId>io.qameta.allure</groupId>
+             <artifactId>allure-testng</artifactId>
+             <version>${allure-testng.version}</version>
+         </dependency>
+     </dependencies>
+
+     <reporting>
+         <excludeDefaults>true</excludeDefaults>
+         <plugins>
+             <plugin>
+                 <groupId>io.qameta.allure</groupId>
+                 <artifactId>allure-maven</artifactId>
+                 <version>${allure-maven.version}</version>
+                 <configuration>
+                     <reportVersion>${allure-maven.reportVersion}</reportVersion>
+                 </configuration>
+             </plugin>
+         </plugins>
+     </reporting>
+
+ </project>
